--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,12 @@
-.App {
+.App{
+  width: 70%;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.movie-item{
+  background-color: #ccc;
+  border: 1px solid #000;
+  margin-bottom: 10px;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.header{
+  background: #ccc;
 }
