--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@
     flex-direction: row;
     background-color: pink;
 }
+.movie-search{
+    border: 1px solid green;
+}
+.movieSearching{
+    padding-bottom: 20px;
+}
