--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
     display: flex;
     justify-content: space-around;
 }
+.movieSlider {
+   width: 100%;
+    overflow-x:auto;
+}
 .movieSlider div{
     display: flex;
     flex-direction: row;
