--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,10 @@ $main-bg-color: orange;
   width: 100%;
   text-align: center;
 }
+.logo{
+  font-size: 30px;
+  font-weight: 800;
+}
 .movie-item{
   background-color: #ccc;
   border: 1px solid #000;
