--- a/src/App.scss
+++ b/src/App.scss
@@ -1,44 +1,102 @@
 $main-bg-color: orange;
 
+#root{
+  padding: 0 15%;
+}
 .App{
   width: 100%;
-  text-align: center;
 }
 .logo{
   font-size: 30px;
   font-weight: 800;
 }
-.movie-item{
-  background-color: #ccc;
-  border: 1px solid #000;
-  margin-bottom: 10px;
+.slick-slider.slick-initialized{
+  background: gray;
 }
+.slick-slider{
+  padding: 0 1%;
+  border: 3px solid gray;
+}
+.slick-arrow.slick-next{
+  right: 0;
+}
+.slick-arrow.slick-prev{
+  left: 0;
+  z-index: 9;
+}
+.slide{
+  .movieItem{
+    background-color: #ccc;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+    .movieItemRight{
+      position: absolute;
+      top: 0;
+      left: 0;
+      color: #ccc;
+    }
+  }
+}
+.movieList{
+  .movieItem{
+    background-color: #ccc;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-start;
+    .movieItemLeft{
+      margin-right: 10px;
+    }
+    .movieItemTitle{
+      font-weight: 700;
+      font-size: 22px;
+    }
+  }
+}
+
 .header{
   background: #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2%;
+}
+.header-right-side{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.movieSearching{
+  margin-right: 100px;
 }
 .mainScreen{
     background-color: #eee;
     display: flex;
-    justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 2%;
+  margin-top: 30px;
 }
-//.movieSlider {
-//   width: 100%;
-//    overflow-x:auto;
-//}
-//.movieSlider div{
-//    display: flex;
-//    flex-direction: row;
-//    background-color: $main-bg-color;
-//}
+.movieSorting{
+  width: 20%;
+  overflow: hidden;
+}
+.movieList{
+  width: 75%;
+}
+.filterItem {
+  border: 1px solid black;
+  padding: 5px;
+  &:hover {
+    cursor: pointer;
+    color: green;
+  }
+}
 .movie-search{
     border: 1px solid green;
 }
-.movieSearching{
-    margin-top: 60px;
-    padding-bottom: 20px;
-}
+
 .slide{
   font-size: 24px;
-  background: pink;
+  background: gray;
   margin: 0 20px;
 }
