--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: green;
+  background: url(https://telegraf.com.ua/files/2018/11/aqamn_vert_tsr_dom_2764x4096-r01_master.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
