--- a/src/components/movieListItem/MovieListItem.scss
+++ b/src/components/movieListItem/MovieListItem.scss
@@ -12,3 +12,34 @@
 //    font-size: 22px;
 //  }
 //}
+.movieDetailComponent{
+  width: 100%;
+  background-color: #eee;
+  padding: 1%;
+}
+.movieDetail{
+  width: 100%;
+  display: flex;
+  .movieComment{
+    textarea{
+      width: 100%;
+    }
+  }
+}
+
+.movieDetailLeft{
+  margin-right: 50px;
+  .movieDetailImg{
+    width: 350px;
+    min-height: 200px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+.movieDetailRight{
+  width: 60%;
+}
+.movieItemTitle{
+  text-transform: uppercase;
+  font-size: 22px;
+}
