add header in movie-detail-component

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,9 @@ $main-bg-color: #ccc;
   justify-content: flex-start;
     .movieItemLeft{
     margin-right: 10px;
+      .movieItemImg{
+        object-fit: cover;
+      }
   }
     .movieItemTitle{
     font-weight: 700;
