route by params to movieDetailComponent

--- a/src/components/movieListItem/MovieListItem.scss
+++ b/src/components/movieListItem/MovieListItem.scss
@@ -22,6 +22,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 40px;
+  background: #ccc;
+  padding: 0 10px 10px;
 }
 
 .movieDetailLeft{
